<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gi.inquiry.admin.AdminHome"
    tools:ignore="MergeRootFrame">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:weightSum="2">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/inquiry_cardview"
                        android:layout_width="200dp"
                        android:layout_height="150dp"
                        android:layout_marginLeft="@dimen/margin_large"
                        android:layout_marginRight="@dimen/margin_large"
                        android:layout_weight="1"
                        android:elevation="100dp"
                        card_view:cardBackgroundColor="@color/cardview_initial_background"
                        card_view:cardCornerRadius="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/margin_medium"
                            android:text="@string/inquiry"
                            android:textSize="20dp"
                            android:textStyle="bold" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/course_cardview"
                        android:layout_width="200dp"
                        android:layout_height="150dp"
                        android:layout_marginLeft="@dimen/margin_large"
                        android:layout_marginRight="@dimen/margin_large"
                        android:layout_weight="1"
                        android:elevation="100dp"
                        card_view:cardBackgroundColor="@color/cardview_initial_background"
                        card_view:cardCornerRadius="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/margin_medium"
                            android:text="@string/course"
                            android:textSize="20dp"
                            android:textStyle="bold" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:weightSum="2">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/faculty_cardview"
                        android:layout_width="200dp"
                        android:layout_height="150dp"
                        android:layout_marginLeft="@dimen/margin_large"
                        android:layout_marginRight="@dimen/margin_large"
                        android:layout_weight="1"
                        android:elevation="100dp"
                        card_view:cardBackgroundColor="@color/cardview_initial_background"
                        card_view:cardCornerRadius="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/margin_medium"
                            android:text="@string/faculty"
                            android:textSize="20dp"
                            android:textStyle="bold" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/report_cardview"
                        android:layout_width="200dp"
                        android:layout_height="150dp"
                        android:layout_marginLeft="@dimen/margin_large"
                        android:layout_marginRight="@dimen/margin_large"
                        android:layout_weight="1"
                        android:elevation="100dp"
                        card_view:cardBackgroundColor="@color/cardview_initial_background"
                        card_view:cardCornerRadius="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/margin_medium"
                            android:text="@string/fee"
                            android:textSize="20dp"
                            android:textStyle="bold" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:weightSum="2">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/admission_cardview"
                        android:layout_width="200dp"
                        android:layout_height="150dp"
                        android:layout_marginLeft="@dimen/margin_large"
                        android:layout_marginRight="@dimen/margin_large"
                        android:layout_weight="1"
                        android:elevation="100dp"
                        card_view:cardBackgroundColor="@color/cardview_initial_background"
                        card_view:cardCornerRadius="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/margin_medium"
                            android:text="@string/admission"
                            android:textSize="20dp"
                            android:textStyle="bold" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/runningbatch_cardview"
                        android:layout_width="200dp"
                        android:layout_height="150dp"
                        android:layout_marginLeft="@dimen/margin_large"
                        android:layout_marginRight="@dimen/margin_large"
                        android:layout_weight="1"
                        android:elevation="100dp"
                        card_view:cardBackgroundColor="@color/cardview_initial_background"
                        card_view:cardCornerRadius="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/margin_medium"
                            android:text="@string/runningbatch"
                            android:textSize="20dp"
                            android:textStyle="bold" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:weightSum="2">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/fees_cardview"
                        android:layout_width="200dp"
                        android:layout_height="150dp"
                        android:layout_marginLeft="@dimen/margin_large"
                        android:layout_marginRight="@dimen/margin_large"
                        android:layout_weight="1"
                        android:elevation="100dp"
                        card_view:cardBackgroundColor="@color/cardview_initial_background"
                        card_view:cardCornerRadius="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/margin_medium"
                            android:text="@string/offers"
                            android:textSize="20dp"
                            android:textStyle="bold" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/offer_cardview"
                        android:layout_width="200dp"
                        android:layout_height="150dp"
                        android:layout_marginLeft="@dimen/margin_large"
                        android:layout_marginRight="@dimen/margin_large"
                        android:layout_weight="1"
                        android:elevation="100dp"
                        android:visibility="invisible"
                        card_view:cardBackgroundColor="@color/cardview_initial_background"
                        card_view:cardCornerRadius="15dp">

                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <!--    </ScrollView>-->

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>